force-app/main/default/objects/AccountSharingCustom__c/AccountSharingCustom__c.object-meta.xml
<CustomObject>
    <label>Account Sharing (Custom)</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Sharing Row ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounts Sharings (Custom)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>