force-app/main/default/objects/AccountSharingCustom__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts Sharings (Custom)</relationshipLabel>
    <relationshipName>Accounts_Sharings_Custom1</relationshipName>
    <type>Lookup</type>
</CustomField>