force-app/main/default/objects/AccountSharingCustom__c/fields/AccountAccessLevel__c.field-meta.xml
<CustomField>
    <fullName>AccountAccessLevel__c</fullName>
    <label>Account Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ShareAccessLevel</valueSetName>
    </valueSet>
</CustomField>