force-app/main/default/objects/AccountSharingCustom__c/fields/ContactAccessLevel__c.field-meta.xml
<CustomField>
    <fullName>ContactAccessLevel__c</fullName>
    <label>ContactAccessLevel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ShareAccessLevel</valueSetName>
    </valueSet>
</CustomField>