force-app/main/default/objects/AccountSharingCustom__c/fields/FirstSalesDate__c.field-meta.xml
<CustomField>
    <fullName>FirstSalesDate__c</fullName>
    <label>First Sales Date</label>
    <type>Date</type>
</CustomField>