force-app/main/default/objects/AccountSharingCustom__c/fields/LastSaleDate__c.field-meta.xml
<CustomField>
    <fullName>LastSaleDate__c</fullName>
    <label>Last Sale Date</label>
    <type>Date</type>
</CustomField>