force-app/main/default/objects/AccountSharingCustom__c/fields/OpportunityAccessLevel__c.field-meta.xml
<CustomField>
    <fullName>OpportunityAccessLevel__c</fullName>
    <label>Opportunity Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ShareAccessLevel</valueSetName>
    </valueSet>
</CustomField>