force-app/main/default/objects/AccountSharingCustom__c/fields/RegularGroup__c.field-meta.xml
<CustomField>
    <fullName>RegularGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regular Group</label>
    <referenceTo>RegularGroups__c</referenceTo>
    <relationshipLabel>Accounts Sharings (Custom)</relationshipLabel>
    <relationshipName>Accounts_Sharings_Custom</relationshipName>
    <type>Lookup</type>
</CustomField>