force-app/main/default/objects/AccountSharingCustom__c/fields/SharingType__c.field-meta.xml
<CustomField>
    <fullName>SharingType__c</fullName>
    <formula>IF(User__c &lt;&gt; null, &apos;User&apos;, &apos;Group&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sharing Type</label>
    <type>Text</type>
</CustomField>