force-app/main/default/objects/AccountSharingCustom__c/fields/UserOrGroupId__c.field-meta.xml
<CustomField>
    <fullName>UserOrGroupId__c</fullName>
    <formula>IF(User__c &lt;&gt; null, CASESAFEID(User__c), CASESAFEID(RegularGroup__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserOrGroupId</label>
    <type>Text</type>
</CustomField>