force-app/main/default/objects/AccountSharingCustom__c/fields/UserStatus__c.field-meta.xml
<CustomField>
    <fullName>UserStatus__c</fullName>
    <formula>IF( User__r.IsActive = true, &apos;Active&apos;, &apos;Not Actvie&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Status</label>
    <type>Text</type>
</CustomField>