force-app/main/default/objects/AccountSharingCustom__c/validationRules/User_and_Group_can_not_be_updated.validationRule-meta.xml
<ValidationRule>
    <fullName>User_and_Group_can_not_be_updated</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(User__c) || ISCHANGED(RegularGroup__c)</errorConditionFormula>
    <errorMessage>User or Group can not be updated</errorMessage>
</ValidationRule>