force-app/main/default/objects/AccountSharingCustom__c/validationRules/User_or_Group_can_be_populated.validationRule-meta.xml
<ValidationRule>
    <fullName>User_or_Group_can_be_populated</fullName>
    <active>true</active>
    <errorConditionFormula>User__c &lt;&gt; NULL &amp;&amp; RegularGroup__c &lt;&gt; NULL</errorConditionFormula>
    <errorMessage>You can fill in either a user or a group</errorMessage>
</ValidationRule>