force-app/main/default/objects/AccountSharingCustom__c/validationRules/User_or_Group_must_be_populated.validationRule-meta.xml
<ValidationRule>
    <fullName>User_or_Group_must_be_populated</fullName>
    <active>true</active>
    <errorConditionFormula>User__c = NULL &amp;&amp; RegularGroup__c = NULL</errorConditionFormula>
    <errorMessage>User or Group must be populated</errorMessage>
</ValidationRule>